crates/rome_diagnostics/tests/macros/description_ident.stderr
error: failed to parse "diagnostic" attribute: expected string literal
 --> tests/macros/description_ident.rs:4:25
  |
4 | #[diagnostic(category = Identifier)]
  |                         ^^^^^^^^^^
