crates/rome_diagnostics/tests/macros/description_ident.rs
use rome_diagnostics::Diagnostic;

#[derive(Debug, Diagnostic)]
#[diagnostic(category = Identifier)]
struct TestDiagnostic {}

fn main() {}
